Remove Globals.GUI from most of the code.